ENG-3828 improved matcher diagnostic message